--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
-    "name": "mmanos/casset",
-    "description": "",
+    "name": "mmanos/laravel-casset",
+    "description": "Asset management package for Laravel.",
+    "keywords": ["laravel"],
     "authors": [
         {
             "name": "Mark Manos",
