--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "require": {
         "php": ">=5.3.0",
         "illuminate/support": "4.x",
-        "leafo/lessphp": "*"
+        "oyejorge/less.php": "1.6.*"
     },
     "autoload": {
         "classmap": [
